--- a/style.css
+++ b/style.css
@@ -34,3 +34,13 @@ body{
     color:rgb(42, 22, 38);
     font-size: xx-large;
 }
+.choice{
+    height: 30px;
+    width: 150px;
+    margin: 10px;
+    background-color: rgb(231, 150, 56);
+    border-radius: 8px;
+    text-align: center;
+    font-size: large;
+
+}
